change the index.html

--- a/index.html
+++ b/index.html
@@ -81,6 +81,9 @@
 
 
 <body>
+	<!-- <h1 align="center">𝐂𝐫𝐢𝐦𝐬𝐨𝐧 𝐋𝐢𝐟𝐞 𝐆𝐚𝐦𝐞</h1>  -->
+	<!-- <h2 align="center">𝐄𝐧𝐝𝐥𝐞𝐬𝐬 𝐠𝐚𝐦𝐞 𝐛𝐲 𝐀𝐧𝐧𝐚 𝐀𝐥𝐞𝐤𝐬𝐚𝐧𝐲𝐚𝐧</h2> 
+	<h3 align="center">𝐄𝐧𝐣𝐨𝐲:]</h3>  -->
 	<div class="tb">
 		<table>
 			<tr id="first">
@@ -124,13 +127,13 @@
 					<p>-</p>
 				</td>
 				<td>
-					<p>Multiplies after energy reaches 8+</p>
+					<p>Multiplies when newCell and multiply reaches 8+</p>
 				</td>
 				<td>
 					<p>No energy</p>
 				</td>
 				<td>
-					<p>Appears new Grass if it's less then 1<br>Can be eaten by Everything Eater<br>Walks on Empty space</p>
+					<p>Multiplys like Flash!!!(it's not normal, really).<br>Walks on Empty space.<br>Can be eaten by Everything Eater.<br>Appears new Grass if it's less then 1.</p>
 				</td>
 			</tr>
 
@@ -152,7 +155,7 @@
 					<p>Eating Grass</p>
 				</td>
 				<td>
-					<p>Eats Grass or Killer of Vegan <br>Dies if it eats Killer of Vegan. Can be eaten by Everything Eater <br>Appears new Vegan if it's equalse or less then 20 and walks on Empty space </p>
+					<p>Eats Grass or Killer of Vegan.<br>Walks on Empty space.<br>Dies if eats Killer of Vegan.<br> Can be eaten by Everything Eater.<br>Appears new Vegan if it's equalse or less then 20.</p>
 				</td>
 			</tr>
 
@@ -174,7 +177,7 @@
 					<p>No energy</p>
 				</td>
 				<td>
-					<p>It can eats everyone and nobody can eats it. It's immortal!!!<br>Walks on Empty space</p>
+					<p>Walks on Empty space.<br>Can eats everyone and nobody can eats it.<br> It's immortal!!!(Jesus Christ)</p>
 				</td>
 			</tr>
 
@@ -196,7 +199,7 @@
 					<p>Eating Vegan</p>
 				</td>
 				<td>
-					<p>Appears new Wild Animal if it's equalse 0<br>Dies if Everything Eater eats it<br>Walks on Empty space and Grass</p>
+					<p>Eats Vegan.<br>Walks on Empty space and Grass.<br>Dies if Everything Eater eats it.<br>Appears new Wild Animal if it's equalse 0.</p>
 				</td>
 			</tr>
 
@@ -215,10 +218,10 @@
 					<p>No multiply</p>
 				</td>
 				<td>
-					<p>No energy</p>
+					<p>Moving</p>
 				</td>
 				<td>
-					<p>Walks on Empty space and Grass<br>Dies if Everything Eater eats it<br>Walks on Empty space and Grass</p>
+					<p>Walks on Empty space and Grass.<br>Dies if Everything Eater eats it.<br>It's something that people create when have no idea(like me:]</p>
 				</td>
 			</tr>
 
@@ -240,7 +243,7 @@
 					<p>No energy</p>
 				</td>
 				<td>
-					<p>Appears new Killer Of Vegan if it's less then 1<br>Walks on Empty space and Grass<br>If vegan eats it, vegan dies:)</p>
+					<p>Walks on Empty space and Grass.<br>Appears new Killer Of Vegan if it's less then 1<br>If vegan eats it, vegan dies:)</p>
 				</td>
 			</tr>
 
